--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=Backend
 
 server.port = 8090
 
-spring.datasource.url=jdbc:postgresql://10.0.119.31:5432/Tingeso_proyecto1
+spring.datasource.url=jdbc:postgresql://:5432/Tingeso_proyecto1
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
@@ -13,3 +13,5 @@ spring.servlet.multipart.max-request-size=500MB
 spring.datasource.hikari.auto-commit=false
 server.tomcat.max-http-form-post-size=10485760
 
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
