--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=Backend
 
 server.port = 8090
 
-spring.datasource.url=jdbc:postgresql://:5432/Tingeso_proyecto1
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/Tingeso_proyecto1
 spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=update
