--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:coverage": "react-scripts test --coverage --watchAll=false"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -31,6 +32,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
+    "sonarqube-scanner": "^4.3.0",
     "vite": "^5.4.8"
   }
 }
