Fix make sure this database password gets changed and removed from the code

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=Backend
 server.port = 8090
 
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/Tingeso_proyecto1
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 
 spring.servlet.multipart.enabled=true
